Add panel to environment

--- a/environment.yml
+++ b/environment.yml
@@ -8,4 +8,7 @@ dependencies:
   - plotly
   - ca-certificates
   - openssl
-prefix: /home/ruan/miniconda3/envs/botrock
+  - panel
+  - certifi
+  - jupyterlab
+  - black
